Fixed Chrome rounding error with drop-down menu clipping.

--- a/ambientimpact_site/stylesheets/global/_menu_primary_sub_menu.scss
+++ b/ambientimpact_site/stylesheets/global/_menu_primary_sub_menu.scss
@@ -179,10 +179,13 @@ $menu-primary-sub-menu-clip-padding: 10px;
           display:  block;
 
           position: absolute;
-          top:      0;
+
+          // The -1px is to avoid rounding errors in Chrome where the sub-menu
+          // contents can sometimes be seen around the edges a little.
+          top:      -1px;
           bottom:   0;
-          left:     0;
-          right:    0;
+          left:     -1px;
+          right:    -1px;
 
           z-index:  index($local-stacking-order, background);
 
